// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error page 1`] = `<ArticleListPageError />`;

exports[`2. a loading state 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        isLoading={true}
        jobTitle=""
        name=""
        twitter=""
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={0}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={1}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`3. an article list with images 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`4. an article list without images 1`] = `
<authorArticlesNoImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri=""
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    page={1}
    pageSize={12}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`5. fetches more articles 1`] = `
<authorArticlesWithImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
        Object {
          "headline": "Headline 3",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40h",
          "url": "https://article3.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.25}
    page={2}
    pageSize={10}
    showImages={true}
  />
</authorArticlesWithImagesProvider>
`;

exports[`6. fetches more articles and falls back to previous data if no more 1`] = `
<authorArticlesNoImagesProvider>
  <ArticleList
    articleListHeader={
      <AuthorProfileHead
        biography={
          Array [
            Object {
              "attributes": Object {
                "value": "Camilla Long",
              },
              "children": Array [],
              "name": "text",
            },
          ]
        }
        isLoading={false}
        jobTitle="Job Title"
        name="Name"
        twitter="twitter"
        uri="https://image.io"
      />
    }
    articles={
      Array [
        Object {
          "headline": "Headline 1",
          "id": "d98c257c-cb16-11e7-b529-95e3fc05f40f",
          "url": "https://article1.io",
        },
      ]
    }
    count={28}
    emptyStateMessage="ff3b632a924b7158198121895f2e8da1"
    imageRatio={1.5}
    page={2}
    pageSize={10}
    showImages={false}
  />
</authorArticlesNoImagesProvider>
`;

exports[`7. an article list header 1`] = `
<View>
  <View>
    <View
      pointerEvents="box-none"
    >
      <Image
        aspectRatio={1}
        uri="https://image.io"
      />
      <Text
        accessibilityRole="header"
      >
        Name
      </Text>
      <Text
        accessibilityRole="header"
        aria-level="2"
      >
        job title
      </Text>
      <View>
        <View>
          <IconTwitter
            height={15}
            width={15}
          />
        </View>
        <TextLink
          url="https://twitter.com/twitter"
        >
          @
          twitter
        </TextLink>
      </View>
      <View>
        <Text>
          Camilla Long
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`8. an article list header with no bio, job title, name or twitter 1`] = `
<View>
  <View>
    <View
      pointerEvents="box-none"
    >
      <Image
        aspectRatio={1}
        uri="https://image.io"
      />
    </View>
  </View>
</View>
`;

exports[`9. an article list header loading 1`] = `
<View>
  <View>
    <View>
      <Gradient />
    </View>
  </View>
</View>
`;

exports[`10. an article list header only changes on loading state change 1`] = `
<View>
  <View>
    <View>
      <Gradient />
    </View>
  </View>
</View>
`;

exports[`10. an article list header only changes on loading state change 2`] = `
<View>
  <View>
    <View
      pointerEvents="box-none"
    >
      <Text
        accessibilityRole="header"
        aria-level="2"
      >
        title 1
      </Text>
      <View>
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`10. an article list header only changes on loading state change 3`] = `
<View>
  <View>
    <View
      pointerEvents="box-none"
    >
      <Text
        accessibilityRole="header"
        aria-level="2"
      >
        title 1
      </Text>
      <View>
        <Text />
      </View>
    </View>
  </View>
</View>
`;

exports[`11. twitter link uses ontwitterlinkpress 1`] = `
Array [
  Array [
    "event",
    Object {
      "twitter": "twitter",
      "url": "https://twitter.com/twitter",
    },
  ],
]
`;
